fix: Remove extra margin-top in the TOC

--- a/src/stylesheets/toc.scss
+++ b/src/stylesheets/toc.scss
@@ -6,7 +6,6 @@
   .toc-menu {
     margin-right: 0.75rem;
     position: sticky;
-    top: var(--toc-top);
 
     h3 {
       display: flex;
